--- a/static/style2.css
+++ b/static/style2.css
@@ -35,7 +35,29 @@ header {
     inset 0 0 0 1px rgba(255, 255, 255, 0.08);
   border: 1px solid rgba(255, 255, 255, 0.05); /* Едва заметная граница */
 }
+img {
+  width: 100%; /* Гибкость – наше всё */
+  height: auto; /* Доверьтесь автоматике */
+  object-fit: contain; /* Исключаем искажения пропорций */
+}
+.box{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 16px 32px;
+  flex-direction: column;
+  background: rgba(16, 14, 38, 0.45); /* Полупрозрачный фиолетовый фон */
+  backdrop-filter: blur(12px);
+  box-shadow:
+    0 0 12px rgba(92, 70, 156, 0.45),
+    inset 0 0 0 1px rgba(255, 255, 255, 0.08);
+  border: 1px solid rgba(255, 255, 255, 0.05);
+  border-radius: 21px;
+  max-width: 500px;
+  flex: 1; /* Равномерное распределение ширины */
+  min-width: 300px; /* Минимальная ширина блока */
 
+}
 /* Логотип */
 .logo {
   background: #1e1e3a;
@@ -96,16 +118,21 @@ nav a:hover {
 
 /* Главный блок */
 main {
-  flex-grow: 1;
   display: flex;
+  flex-direction: row;
+  flex-grow: 1;
+  column-gap: 50px;
   align-items: center;
-  justify-content: space-between;
-  padding: 48px 60px 80px 60px;
   max-width: 1400px;
   margin: 0 auto;
 
 }
+.box-right{
+  max-width: 450px;
+  min-width: 300px;
+  flex-grow: 2;
 
+}
 /* Левая часть с текстом */
 .content-left {
   max-width: 600px;
@@ -119,7 +146,7 @@ main {
   margin: 0 0 20px 0;
 }
 .gradient-text .highlight-purple {
-    background: linear-gradient(135deg,#111140,#302B63,#5150A3,#302B63,#111140);
+  background: linear-gradient(135deg,#111140,#302B63,#5150A3,#302B63,#111140);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
@@ -200,11 +227,7 @@ button {
   text-align: center;
 }
 
-.box-right{
-  max-width: 450px;
-  min-width: 300px;
-  margin-right: auto;
-}
+
 /* Нижний бегущий текст */
 footer {
   background: linear-gradient(135deg,#111140,#302B63,#5150A3,#302B63,#111140);
